[package]
name = "todo-lecture"
version = "0.1.0"
author= "Martin Wienc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}